--- a/src/app/ui/dashboard/navbar/navbar.module.css
+++ b/src/app/ui/dashboard/navbar/navbar.module.css
@@ -5,6 +5,7 @@
     background-color: var(--bg-soft);
     padding: 20px 10px;
     border-radius: 6px;
+    margin: 20px 20px 20px 0;
 }
 
 .title {
