--- a/src/app/ui/dashboard/dashboard.module.css
+++ b/src/app/ui/dashboard/dashboard.module.css
@@ -25,6 +25,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 12px;
 }
 
 .content {
@@ -34,6 +35,5 @@
 }
 
 .rightbar {
-    display: flex;
     flex: 1;
 }
