--- a/src/app/ui/dashboard/products/Products.module.css
+++ b/src/app/ui/dashboard/products/Products.module.css
@@ -1,11 +1,9 @@
-.usersPage {}
-
-.users {
+.products {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-right: 20px;
     padding: 10px;
+    margin-right: 20px;
     border-radius: 6px;
     background-color: var(--bg-soft);
 }
@@ -14,20 +12,16 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 20px;
 }
 
-.btnAddNew {
+.btnAddNewProd {
     outline: none;
     border: none;
     padding: 10px;
     border-radius: 6px;
     color: var(--text);
     background-color: #5d57c9;
-}
-
-.btnAddNew:hover {
-    cursor: pointer;
-    opacity: 0.9;
 }
 
 .table {
