updated: done ui add product and user

--- a/src/app/components/Input/Input.module.css
+++ b/src/app/components/Input/Input.module.css
@@ -1,6 +1,9 @@
 .customInput {
-    border: none;
     outline: none;
     border-radius: 6px;
     padding: 10px;
+    width: 100%;
+    border: 2px solid #2e374a;
+    color: var(--text-soft);
+    background-color: transparent;
 }
