--- a/src/app/ui/dashboard/pagination/Pagination.module.css
+++ b/src/app/ui/dashboard/pagination/Pagination.module.css
@@ -1,14 +1,20 @@
 .pagination {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 14px;
 }
 
 .previousBtn {
     padding: 6px;
-    cursor: not-allowed !important;
 }
 
 .nextBtn {
     padding: 6px;
+}
+
+.pageNumber {
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--text-soft);
 }
